# GPUImageSweep

./: .gitignore  CMakeLists.txt  FindOpenCL.cmake  README.md  main.cpp  mainCPU.cpp
clgl/: CMakeLists.txt
clgl/include/: clgl.hpp  clgl_error.hpp  clgl_linux.hpp  clgl_single_platform.hpp  clgl_single_platform_linux.hpp  clgl_single_platform_windows.hpp  clgl_windows.hpp
clgl/src/: CMakeLists.txt  clgl.cpp  clgl_error.cpp  clgl_linux.cpp  clgl_single_platform.cpp  clgl_single_platform_linux.cpp  clgl_single_platform_windows.cpp  clgl_windows.cpp
cpu/: CMakeLists.txt
cpu/include/: image.h
cpu/src/: CMakeLists.txt  image.cpp
helpers/: homography.py  homography.txt  homography.txts  projection_decomposition.py
image/: CMakeLists.txt
image/include/: clgl_image.hpp  image_acquirer.hpp  image_acquirer_single_camera.hpp
image/src/: CMakeLists.txt  clgl_image.cpp  image_acquirer.cpp  image_acquirer_single_camera.cpp
kernels/: plane_sweep.cl
planeSweep/: CMakeLists.txt
planeSweep/include/: clgl_projection.hpp  homography.hpp  plane_sweep.hpp
planeSweep/src/: CMakeLists.txt  clgl_projection.cpp  homography.cpp  plane_sweep.cpp
samples/: dino00.jpgs  dinosaur-cameras.tgz  face00.txt  face00R.tif  face01.txt  face01R.tif  matrix-cameras.tgz
samples/calib/: camera1.m  camera2.m  dino00.txt  dino01.txt  matrix00.txt  matrix01.txt  matrix08.txt  matrix09.txt
utils/: CMakeLists.txt
utils/include/: types.hpp
utils/src/: CMakeLists.txt  types.cpp
windowManager/: CMakeLists.txt
windowManager/include/: main_window_glut.hpp  window_manager.hpp  window_manager_glut.hpp
windowManager/src/: CMakeLists.txt  main_window_glut.cpp  window_manager.cpp  window_manager_glut.cpp
